--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 python-telegram-bot==20.7
-pandas==2.0.3
 openpyxl==3.1.2
 python-dotenv==0.19.0
-aiohttp==3.8.4
+pandas==2.2.2
+numpy==1.26.4
+aiohttp==3.10.0
